added rough HTML/CSS layout + preliminary code for JS

--- a/index.html
+++ b/index.html
@@ -15,13 +15,32 @@
         <h1>Weather Dashboard</h1>
     </header>
 
-    <!-- container -->
-    <!-- aside with the search form -->
-    <!-- search history div -->
+    <main>
+        <!-- container -->
+        <div class="container twenty-two">
+            <!-- aside with the search form -->
+            <aside>
+                <form>
+                    <h1>Search for a City:</h1>
+                    <input type="text">
+                    <input type="submit" value="Search">
+                </form>
+                <!-- search history div -->
+                <div id="history">
+                    <p>History test</p>
+                </div>
+            </aside>
+        </div>
 
-    <!-- container -->
-    <!-- section for today's weather -->
-    <!-- section for the forecast -->
+        <!-- container -->
+        <div class="container sixty-seven">
+            <!-- section for today's weather -->
+            <section id="weather">Weather test</section>
+            <!-- section for the forecast -->
+            <h2>5-Day Forecast:</h2>
+            <section id="forecast">Forecast test</section>
+        </div>
+    </main>
 
     <!-- use day.js to easily format dates -->
     <script 
