added input functionality + search history

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <form>
                     <h1>Search for a City:</h1>
                     <input type="text">
-                    <input type="submit" value="Search">
+                    <input type="submit" id="submit" value="Search">
                 </form>
                 <!-- search history div -->
                 <div id="history">
@@ -43,20 +43,19 @@
     </main>
 
     <!-- use day.js to easily format dates -->
-    <script 
-        src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.5/dayjs.min.js"                                      integrity="sha512-Ot7ArUEhJDU0cwoBNNnWe487kjL5wAOsIYig8llY/ l0P2TUFwgsAHVmrZMHsT8NGo+HwkjTJsNErS6QqIkBxDw=="     crossorigin="anonymous" 
-        referrerpolicy="no-referrer">
+    <!-- <script 
+        src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.5/dayjs.min.js"                                      integrity="sha512-Ot7ArUEhJDU0cwoBNNnWe487kjL5wAOsIYig8llY/ l0P2TUFwgsAHVmrZMHsT8NGo+HwkjTJsNErS6QqIkBxDw=="     crossorigin="anonymous">
     </script>
     <script 
         src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.5/plugin/utc.min.js" 
-        integrity="sha512-z84O912dDT9nKqvpBnl1tri5IN0j/ OEgMzLN1GlkpKLMscs5ZHVu+G2CYtA6dkS0YnOGi3cODt3BOPnYc8Agjg=="     crossorigin="anonymous" 
-        referrerpolicy="no-referrer">
+        integrity="sha512-z84O912dDT9nKqvpBnl1tri5IN0j/ OEgMzLN1GlkpKLMscs5ZHVu+G2CYtA6dkS0YnOGi3cODt3BOPnYc8Agjg=="
+        crossorigin="anonymous">
     </script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.5/plugin/timezone.min.js" 
-        integrity="sha512-fG1tT/Wn/ZOyH6/Djm8HQBuqvztPQdK/  vBgNFLx6DQVt3yYYDPN3bXnGZT4z4kAnURzGQwAnM3CspmhLJAD/5Q=="     crossorigin="anonymous" 
-        referrerpolicy="no-referrer">
-    </script>
+        integrity="sha512-fG1tT/Wn/ZOyH6/Djm8HQBuqvztPQdK/  vBgNFLx6DQVt3yYYDPN3bXnGZT4z4kAnURzGQwAnM3CspmhLJAD/5Q=="     crossorigin="anonymous">
+    </script> -->
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
