finished 5-day forecast functionality

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <!-- container -->
         <div class="container sixty-seven">
             <!-- section for today's weather -->
-            <section id="weather">Weather test</section>
+            <section class="weather">Weather test</section>
             <!-- section for the forecast -->
             <h2>5-Day Forecast:</h2>
-            <section id="forecast">Forecast test</section>
+            <section class="forecast">Forecast test</section>
         </div>
     </main>
 
