--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 </head>
 
 <body>
-    <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
-        <h1>Weather Dashboard</h1>
+    <header>
+        <div class="weather-header">
+            <h1>Weather Dashboard</h1>
+        </div>
     </header>
 
     <main>
